fix overflow style of column name

--- a/static/socialcalc.css
+++ b/static/socialcalc.css
@@ -79,7 +79,7 @@ body:last-child .defaultPeer {
 }
 
 #te_fullgrid td {
-    overflow: visible;
+    overflow: hidden;
     word-break: break-all;
     word-wrap: break-word;
 }
